mpi.d

int PMPI_Type_create_indexed_block(int count, int blocklength,
                                   int array_of_displacements[],
                                   MPI_Datatype oldtype,
                                   MPI_Datatype *newtype);
int PMPI_Type_create_struct(int count, int array_of_block_lengths[],
                            MPI_Aint array_of_displacements[],
                            MPI_Datatype array_of_types[],
                            MPI_Datatype *newtype);
int PMPI_Type_create_subarray(int ndims, int size_array[], int subsize_array[],
                              int start_array[], int order,
                              MPI_Datatype oldtype, MPI_Datatype *newtype);
int PMPI_Type_create_resized(MPI_Datatype oldtype, MPI_Aint lb,
                             MPI_Aint extent, MPI_Datatype *newtype);
int PMPI_Type_delete_attr(MPI_Datatype type, int type_keyval);
int PMPI_Type_dup(MPI_Datatype type, MPI_Datatype *newtype);
int PMPI_Type_extent(MPI_Datatype type, MPI_Aint *extent);
int PMPI_Type_free(MPI_Datatype *type);
int PMPI_Type_free_keyval(int *type_keyval);
MPI_Datatype PMPI_Type_f2c(MPI_Fint datatype);
int PMPI_Type_get_attr(MPI_Datatype type, int type_keyval,
                       void *attribute_val, int *flag);
int PMPI_Type_get_contents(MPI_Datatype mtype, int max_integers,
                           int max_addresses, int max_datatypes,
                           int array_of_integers[],
                           MPI_Aint array_of_addresses[],
                           MPI_Datatype array_of_datatypes[]);
int PMPI_Type_get_envelope(MPI_Datatype type, int *num_integers,
                           int *num_addresses, int *num_datatypes,
                           int *combiner);
int PMPI_Type_get_extent(MPI_Datatype type, MPI_Aint *lb,
                         MPI_Aint *extent);
int PMPI_Type_get_name(MPI_Datatype type, char *type_name,
                       int *resultlen);
int PMPI_Type_get_true_extent(MPI_Datatype datatype, MPI_Aint *true_lb,
                              MPI_Aint *true_extent);
int PMPI_Type_hindexed(int count, int array_of_blocklengths[],
                       MPI_Aint array_of_displacements[],
                       MPI_Datatype oldtype, MPI_Datatype *newtype);
int PMPI_Type_hvector(int count, int blocklength, MPI_Aint stride,
                      MPI_Datatype oldtype, MPI_Datatype *newtype);
int PMPI_Type_indexed(int count, int array_of_blocklengths[],
                      int array_of_displacements[],
                      MPI_Datatype oldtype, MPI_Datatype *newtype);
int PMPI_Type_lb(MPI_Datatype type, MPI_Aint *lb);
int PMPI_Type_match_size(int typeclass, int size, MPI_Datatype *type);
int PMPI_Type_set_attr(MPI_Datatype type, int type_keyval,
                       void *attr_val);
int PMPI_Type_set_name(MPI_Datatype type, char *type_name);
int PMPI_Type_size(MPI_Datatype type, int *size);
int PMPI_Type_struct(int count, int array_of_blocklengths[],
                     MPI_Aint array_of_displacements[],
                     MPI_Datatype array_of_types[],
                     MPI_Datatype *newtype);
int PMPI_Type_ub(MPI_Datatype mtype, MPI_Aint *ub);
int PMPI_Type_vector(int count, int blocklength, int stride,
                     MPI_Datatype oldtype, MPI_Datatype *newtype);
int PMPI_Unpack(void *inbuf, int insize, int *position,
                void *outbuf, int outcount, MPI_Datatype datatype,
                MPI_Comm comm);
int PMPI_Unpublish_name(char *service_name, MPI_Info info,
                        char *port_name);
int PMPI_Unpack_external (char *datarep, void *inbuf, MPI_Aint insize,
                          MPI_Aint *position, void *outbuf, int outcount,
                          MPI_Datatype datatype);
int PMPI_Waitall(int count, MPI_Request *array_of_requests,
                 MPI_Status *array_of_statuses);
int PMPI_Waitany(int count, MPI_Request *array_of_requests,
                 int *index, MPI_Status *status);
int PMPI_Wait(MPI_Request *request, MPI_Status *status);
int PMPI_Waitsome(int incount, MPI_Request *array_of_requests,
                  int *outcount, int *array_of_indices,
                  MPI_Status *array_of_statuses);
MPI_Fint PMPI_Win_c2f(MPI_Win win);
int PMPI_Win_call_errhandler(MPI_Win win, int errorcode);
int PMPI_Win_complete(MPI_Win win);
int PMPI_Win_create(void *base, MPI_Aint size, int disp_unit,
                    MPI_Info info, MPI_Comm comm, MPI_Win *win);
int PMPI_Win_create_errhandler(MPI_Win_errhandler_fn *func,
                               MPI_Errhandler *errhandler);
int PMPI_Win_create_keyval(MPI_Win_copy_attr_function *win_copy_attr_fn,
                           MPI_Win_delete_attr_function *win_delete_attr_fn,
                           int *win_keyval, void *extra_state);
int PMPI_Win_delete_attr(MPI_Win win, int win_keyval);
MPI_Win PMPI_Win_f2c(MPI_Fint win);
int PMPI_Win_fence(int ass, MPI_Win win);
int PMPI_Win_free(MPI_Win *win);
int PMPI_Win_free_keyval(int *win_keyval);
int PMPI_Win_get_attr(MPI_Win win, int win_keyval,
                      void *attribute_val, int *flag);
int PMPI_Win_get_errhandler(MPI_Win win, MPI_Errhandler *errhandler);
int PMPI_Win_get_group(MPI_Win win, MPI_Group *group);
int PMPI_Win_get_name(MPI_Win win, char *win_name, int *resultlen);
int PMPI_Win_lock(int lock_type, int rank, int ass, MPI_Win win);
int PMPI_Win_post(MPI_Group group, int ass, MPI_Win win);
int PMPI_Win_set_attr(MPI_Win win, int win_keyval, void *attribute_val);
int PMPI_Win_set_errhandler(MPI_Win win, MPI_Errhandler errhandler);
int PMPI_Win_set_name(MPI_Win win, char *win_name);
int PMPI_Win_start(MPI_Group group, int ass, MPI_Win win);
int PMPI_Win_test(MPI_Win win, int *flag);
int PMPI_Win_unlock(int rank, MPI_Win win);
int PMPI_Win_wait(MPI_Win win);
double PMPI_Wtick();
double PMPI_Wtime();


}

/*
 * Conditional MPI 2 C++ bindings support.  Include if:
 *   - The user does not explicitly request us to skip it (when a C++ compiler
 *       is used to compile C code).
 *   - We want C++ bindings support
 *   - We are not building OMPI itself
 *   - We are using a C++ compiler
 */
//Do not want.
/* OMPI_MPI_H */
